Fix: Scrollbars on tiny screens from Adoption banner.

--- a/src/styles/adoption-banner.module.scss
+++ b/src/styles/adoption-banner.module.scss
@@ -67,6 +67,7 @@
 @include Mixins.mediaQuery(Theme.$phoneViewport) {
   .adoptionBanner {
     div.eventHandlerDiv {
+      overflow: clip;
       div.buttonText {
         font-size: 1.8rem;
         padding: Theme.$spaceBetweenElements / 8;
